# refrag

./: .env_example  .gitignore  GAP_ANALYSIS.md  PROPOSAL.md  README.md  main.py  makefile  pyproject.toml  validate_changes.py
notebooks/: demo.ipynb
refrag/: __init__.py  config.py  pipeline.py  utils.py
refrag/compression/: __init__.py  cache.py  chunker.py  encoder.py
refrag/generation/: __init__.py  hybrid_input.py  llm_interface.py
refrag/projection/: __init__.py  projector.py
refrag/retrieval/: __init__.py  embedder.py  retriever.py  vector_store.py
refrag/selection/: __init__.py  base.py  complexity.py  heuristic.py
tests/: test_improvements.py  validate_changes.py
